# Tarot

./: .gitignore  BuildTest.sh  CMakeLists.txt
Modules/: Tarot.ixx
Modules/Filter/: Tarot-Filter-C2D.ixx  Tarot-Filter.ixx
Modules/Internal/: Tarot-Interal.ixx
Modules/Random/: Random.ixx  Tarot-Random-MT19937.ixx  Tarot-Random-PCG.ixx  Tarot-Random.ixx
Modules/Sample/: Tarot-Sample-C1D.ixx  Tarot-Sample-C2D.ixx  Tarot-Sample-D1D.ixx  Tarot-Sample.ixx
Sandbox/: Sandbox.ixx
Test/: Sandbox.ixx
